[tool.poetry]
name = "ynab-consolidator"
version = "0.1.0"
description = ""
authors = ["Luna <lunaa@moonstruck.dev>"]

[tool.poetry.dependencies]
python = "^3.6.8"
urllib3 = "^1.25"
six = "^1.12"
python-dateutil = "^2.8"
certifi = "^2019.6"
fire = "^0.2.0"
CurrencyConverter = "^0.13.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
